Visual style of post item

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -7,17 +7,42 @@
 .container .newspaper-page .post-item {
   padding: 25px;
 }
-.container .newspaper-page .post-item .post-item-content {
-  padding-left: 5px;
-  box-shadow: 6px 5px 0px 5px #e9ecef;
+.container .newspaper-page .post-item .post-item-container {
+  border: 1px solid #dadce0;
+  border-radius: 8px;
+  box-shadow: 4px 1px 0px 0px #e9ecef;
 }
-.container .newspaper-page .post-item .post-item-content .post-item-image img {
+.container .newspaper-page .post-item .post-item-container .post-item-content {
+  text-align: left;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-content .post-item-image img {
+  border-radius: 8px 8px 0 0;
   max-width: 100%;
   min-height: 80%;
 }
-.container .newspaper-page .post-item .post-item-content .post-item-title {
+.container .newspaper-page .post-item .post-item-container .post-item-content .post-item-title {
+  padding-left: 5px;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-author {
+  text-align: left;
+  padding-left: 4px;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-activities {
+  padding-left: 2px;
   text-align: left;
 }
-.container .newspaper-page .post-item .post-item-content .post-item-title:hover {
-  color: darkred;
+.container .newspaper-page .post-item .post-item-container .post-item-activities .post-item-activity {
+  width: 46px;
+  height: 26px;
+  display: inline-block;
+  text-indent: 32px;
+  text-align: left;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-activities .comment-activity {
+  background: url(/public/images/post_comment.png) 0px 2px;
+  background-repeat: no-repeat;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-activities .like-activity {
+  background: url(/public/images/post_like.png) 0px 0px;
+  background-repeat: no-repeat;
 }
