--- a/resources/less/welcome.less
+++ b/resources/less/welcome.less
@@ -17,7 +17,6 @@
                     text-align: left;
 
                     .post-item-image {
-
                         img {
                             border-radius: 8px 8px 0 0;
                             max-width: 100%;
@@ -26,18 +25,18 @@
                     }
 
                     .post-item-title {
-                        padding-left: 5px;
+                        padding: 8px 18px;
                     }
                 }
 
                 .post-item-author {
-                    text-align: left;
-                    padding-left: 4px;
+                    text-align: right;
+                    padding-right: 18px;
                 }
 
                 .post-item-activities {
-                    padding-left: 2px;
                     text-align: left;
+                    padding: 12px;
 
                     .post-item-activity {
                         width: 46px;
