Welcome template is inherit the main layout now. Webpack mix manifest ignored.

--- a/resources/less/welcome.less
+++ b/resources/less/welcome.less
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 10%;
+    margin-top: 2%;
     padding-left: 15px;
     background: bottom;
     box-shadow: 0 0 10px 0px #dee2e6;
@@ -15,6 +15,10 @@
 
                 .post-item-content {
                     text-align: left;
+
+                    a {
+                        color: black;
+                    }
 
                     .post-item-image {
                         img {
