--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 10%;
+  margin-top: 2%;
   padding-left: 15px;
   background: bottom;
   box-shadow: 0 0 10px 0px #dee2e6;
@@ -14,6 +14,9 @@
 }
 .container .newspaper-page .post-item .post-item-container .post-item-content {
   text-align: left;
+}
+.container .newspaper-page .post-item .post-item-container .post-item-content a {
+  color: black;
 }
 .container .newspaper-page .post-item .post-item-container .post-item-content .post-item-image img {
   border-radius: 8px 8px 0 0;
