--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10933,3 +10933,35 @@ a.text-dark:focus {
   }
 }
 
+.newspaper-container {
+  padding-left: 15px;
+  background: bottom;
+  box-shadow: 0 0 10px 0px #dee2e6;
+}
+
+.newspaper-container .post-items-container .post-item {
+  flex: 1 1 33%;
+}
+
+.newspaper-container .post-items-container .post-item img {
+  border-radius: 0.2rem;
+}
+
+.post-item-activities .post-item-activity {
+  width: 46px;
+  height: 26px;
+  display: inline-block;
+  text-indent: 32px;
+  text-align: left;
+}
+
+.post-item-activities .comment-activity {
+  background: url(/public/images/post_comment.png) 0px 2px;
+  background-repeat: no-repeat;
+}
+
+.post-item-activities .like-activity {
+  background: url(/public/images/post_like.png) 0px 0px;
+  background-repeat: no-repeat;
+}
+
