--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,40 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+.newspaper-container { 
+    padding-left: 15px;
+    background: bottom;
+    box-shadow: 0 0 10px 0px #dee2e6;
+
+    .post-items-container {
+        .post-item {
+            flex: 1 1 33%;
+
+            img {
+                border-radius: 0.2rem;
+            }
+        }
+    }
+}
+
+.post-item-activities {
+    .post-item-activity {
+        width: 46px;
+        height: 26px;
+        display: inline-block;
+        text-indent: 32px;
+        text-align: left;
+    }
+
+    .comment-activity {
+        background: url(/public/images/post_comment.png) 0px 2px;
+        background-repeat: no-repeat;
+    }
+
+    .like-activity {
+        background: url(/public/images/post_like.png) 0px 0px;
+        background-repeat: no-repeat;
+    }
+}
